# tensor-core-correlator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: Utils.cmake
libtcc/: CMakeLists.txt  Correlator.cc  Correlator.h  Kernel.h
test/: CMakeLists.txt
test/Common/: CMakeLists.txt  Record.h  UnitTest.h
test/CorrelatorTest/: CMakeLists.txt  CorrelatorTest.cc
test/OpenCLCorrelatorTest/: CMakeLists.txt  OpenCLCorrelatorTest.cc
test/SimpleExample/: CMakeLists.txt  SimpleExample.cu
